M2/C_v2/slurm-15887942.out
gcc -c -lm -pg -O0 -fopenmp -mavx -std=c99 -g -L/usr/lib64/openmpi/lib -lmpi_cxx -lmpi -I/usr/include/openmpi-x86_64 setup_final.c
setup_final.c:103:5: error: expected identifier or ‘(’ before ‘for’
     for (int i = myfirstN; i < mylastN; i++) {
     ^
setup_final.c:103:30: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
     for (int i = myfirstN; i < mylastN; i++) {
                              ^
setup_final.c:103:42: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
     for (int i = myfirstN; i < mylastN; i++) {
                                          ^
setup_final.c:138:5: error: expected identifier or ‘(’ before ‘if’
     if (rank == 0) {
     ^
setup_final.c:142:7: error: expected identifier or ‘(’ before ‘else’
     } else {
       ^
setup_final.c:147:5: warning: data definition has no type or storage class [enabled by default]
     MPI_Finalize();
     ^
setup_final.c:147:5: warning: type defaults to ‘int’ in declaration of ‘MPI_Finalize’ [enabled by default]
setup_final.c:149:5: error: expected identifier or ‘(’ before ‘}’ token
     }
     ^
make: *** [setup_final.o] Error 1
--------------------------------------------------------------------------
[[45365,1],1]: A high-performance Open MPI point-to-point messaging module
was unable to find any relevant network interfaces:

Module: OpenFabrics (openib)
  Host: smp-9-20

Another transport will be used instead, although this may result in
lower performance.
--------------------------------------------------------------------------
[smp-9-19.local:11859] 1 more process has sent help message help-mpi-btl-base.txt / btl:no-nics
[smp-9-19.local:11859] Set MCA parameter "orte_base_help_aggregate" to 0 to see all help / error messages

real	0m0.768s
user	0m0.073s
sys	0m0.072s
